--- a/baseApp/src/main/res/drawable/bg_grey.xml
+++ b/baseApp/src/main/res/drawable/bg_grey.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners android:radius="@dimen/general_button_corner" />
+            <corners android:radius="@dimen/button_radius" />
             <stroke
                 android:width="1dp"
                 android:color="@color/color_grey" />
@@ -11,7 +11,7 @@
                 android:startColor="@color/color_grey" />
             <size
                 android:width="100dp"
-                android:height="@dimen/general_button_size" />
+                android:height="@dimen/button_min_height" />
         </shape>
     </item>
 </layer-list>
