--- a/baseApp/src/main/res/drawable/item_view_style.xml
+++ b/baseApp/src/main/res/drawable/item_view_style.xml
@@ -2,11 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners android:radius="@dimen/button_radius" />
             <stroke
-                android:width="1.5dp"
-                android:color="@color/color_grey" />
-           
+                android:width="1dp"
+                android:color="@color/color_grey_light" />
         </shape>
     </item>
 </layer-list>
