--- a/baseApp/src/main/res/layout/add_area_view.xml
+++ b/baseApp/src/main/res/layout/add_area_view.xml
@@ -24,23 +24,21 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/btn_action_left"
+                android:id="@+id/action_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                android:onClick="@{()-> viewModel.actionLeft()}"
-                android:src="@mipmap/ic_close"
-                android:textSize="@dimen/general_text_size_large" />
+                android:src="@mipmap/ic_close" />
 
             <TextView
                 android:id="@+id/txt_title"
+                style="@style/TextView.Screen.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="center|left"
-                android:text="Thêm Khu Vực"
-                android:textSize="@dimen/general_text_size_large" />
+                android:text="Thêm Khu Vực" />
 
         </LinearLayout>
 
@@ -122,13 +120,13 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/TextView.Screen.Description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="2"
                     android:gravity="center|left"
-                    android:text="So Van su dung: "
-                    android:textSize="@dimen/general_text_size_large" />
+                    android:text="So Van su dung: " />
 
                 <TextView
                     android:layout_width="0dp"
@@ -154,7 +152,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/border_rect_bg"
+            android:background="@drawable/bg_grey"
             android:minHeight="46dp"
             android:text="Luu Thong Tin" />
 
