--- a/baseApp/src/main/res/layout/create_plan_view.xml
+++ b/baseApp/src/main/res/layout/create_plan_view.xml
@@ -30,8 +30,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:onClick="@{()-> viewModel.actionLeft()}"
-                android:src="@mipmap/ic_back"
-                android:textSize="@dimen/general_text_size_large" />
+                android:src="@mipmap/ic_back" />
 
             <TextView
                 android:id="@+id/txt_title"
@@ -40,7 +39,7 @@
                 android:layout_weight="2.5"
                 android:gravity="center"
                 android:text="Create new Plan"
-                android:textSize="@dimen/general_text_size_large" />
+                android:textSize="@dimen/connect_text_size_title" />
 
             <TextView
                 android:id="@+id/btn_action_right"
@@ -50,7 +49,7 @@
                 android:gravity="center"
                 android:onClick="@{()-> viewModel.actionRight}"
                 android:text="Close"
-                android:textSize="@dimen/general_text_size_large" />
+                android:textSize="@dimen/connect_text_size_title" />
 
         </LinearLayout>
 
@@ -82,8 +81,8 @@
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity="top|right"
-                    android:layout_marginRight="40dp"
                     android:layout_marginTop="30dp"
+                    android:layout_marginRight="40dp"
                     android:src="@mipmap/ic_gym" />
 
                 <ImageView
@@ -98,16 +97,16 @@
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity="bottom|left"
-                    android:layout_marginBottom="30dp"
                     android:layout_marginLeft="40dp"
+                    android:layout_marginBottom="30dp"
                     android:src="@mipmap/ic_go_out" />
 
                 <ImageView
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_gravity="bottom|right"
-                    android:layout_marginBottom="20dp"
                     android:layout_marginRight="60dp"
+                    android:layout_marginBottom="20dp"
                     android:src="@mipmap/ic_go_out" />
 
             </FrameLayout>
@@ -117,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Idea option"
-                android:textSize="@dimen/general_text_size_large" />
+                android:textSize="@dimen/connect_text_size_title" />
 
         </LinearLayout>
 
@@ -136,8 +135,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_marginTop="50dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/border_rect_bg"
                 android:minHeight="60dp"
                 android:onClick="@{()-> viewModel.typeYourIdea()}"
@@ -148,8 +147,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/border_rect_bg"
                 android:minHeight="60dp"
                 android:text="Set Time Duration" />
@@ -158,8 +157,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_marginTop="50dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/bg_grey"
                 android:minHeight="60dp"
                 android:onClick="@{()-> viewModel.inviteFriends()}"
