--- a/baseApp/src/main/res/layout/header_item_view.xml
+++ b/baseApp/src/main/res/layout/header_item_view.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="10dp"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="5dp"
-    android:background="@drawable/border_rect_bg"
+    android:background="@drawable/border_header_bg"
     android:minHeight="50dp">
 
     <TextView
