--- a/baseApp/src/main/res/layout/item_data.xml
+++ b/baseApp/src/main/res/layout/item_data.xml
@@ -15,6 +15,7 @@
 
     <TextView
         android:id="@+id/txt_name"
+        style="@style/TextView.Screen.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -25,6 +26,7 @@
 
     <TextView
         android:id="@+id/txt_phone"
+        style="@style/TextView.Screen.Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -34,6 +36,7 @@
 
     <TextView
         android:id="@+id/txt_status"
+        style="@style/TextView.Screen.Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|left"
@@ -43,6 +46,7 @@
 
     <TextView
         android:id="@+id/txt_schedule"
+        style="@style/TextView.Screen.Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
