--- a/baseApp/src/main/res/layout/notification_view.xml
+++ b/baseApp/src/main/res/layout/notification_view.xml
@@ -23,23 +23,21 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/btn_action_left"
+                android:id="@+id/action_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                android:onClick="@{()-> viewModel.actionLeft()}"
-                android:src="@mipmap/ic_back"
-                android:textSize="@dimen/general_text_size_large" />
+                android:src="@mipmap/ic_back" />
 
             <TextView
                 android:id="@+id/txt_title"
+                style="@style/TextView.Screen.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="center|left"
-                android:text="Thông Báo"
-                android:textSize="@dimen/general_text_size_large" />
+                android:text="Thông Báo" />
 
         </LinearLayout>
 
@@ -55,6 +53,6 @@
             android:paddingLeft="20dp"
             android:paddingRight="10dp"
             android:text="Thông báo tin nhắn"
-            android:textSize="@dimen/general_text_size_large" />
+            android:textSize="@dimen/connect_text_size_title" />
     </LinearLayout>
 </layout>
