--- a/baseApp/src/main/res/values/base_styles.xml
+++ b/baseApp/src/main/res/values/base_styles.xml
@@ -4,8 +4,7 @@
 
     <style name="Widget.Button">
         <item name="android:gravity">center</item>
-        <item name="android:textSize">@dimen/general_text_size_medium</item>
-        <item name="android:minHeight">@dimen/general_list_item_height</item>
-        <item name="android:minWidth">@dimen/general_button_size</item>
+        <item name="android:textSize">@dimen/connect_text_size_description</item>
+        <item name="android:minHeight">@dimen/button_min_height</item>
     </style>
 </resources>
