--- a/baseApp/src/main/res/values/styles.xml
+++ b/baseApp/src/main/res/values/styles.xml
@@ -3,7 +3,31 @@
 
     <style name="Widget.TextView">
         <item name="android:gravity">center</item>
-        <item name="android:textSize">@dimen/general_text_size_medium</item>
-        <item name="android:minHeight">@dimen/general_list_item_height</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/connect_text_size_title</item>
+    </style>
+
+    <style name="TextView.Screen.Title" parent="android:Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/connect_text_size_title</item>
+        <item name="android:textColor">@color/color_black</item>
+    </style>
+
+    <style name="TextView.Screen.Description" parent="android:Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/connect_text_size_description</item>
+        <item name="android:textColor">@color/color_black</item>
+    </style>
+
+    <style name="TextView.Screen.Menu" parent="android:Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/connect_text_size_menu</item>
+        <item name="android:textColor">@color/color_black</item>
     </style>
 </resources>
