--- a/baseApp/src/main/res/layout/header_item_view.xml
+++ b/baseApp/src/main/res/layout/header_item_view.xml
@@ -3,14 +3,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fl_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/actionbar_height"
     android:layout_gravity="top"
     android:layout_marginLeft="20dp"
     android:layout_marginTop="10dp"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="5dp"
     android:background="@drawable/border_header_bg"
-    android:minHeight="50dp">
+    >
 
     <TextView
         android:id="@+id/txt_name"
