--- a/baseApp/src/main/res/layout/add_area_view.xml
+++ b/baseApp/src/main/res/layout/add_area_view.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -29,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                android:src="@mipmap/ic_close" />
+                app:srcCompat="@mipmap/ic_close" />
 
             <TextView
                 android:id="@+id/txt_title"
@@ -55,11 +56,12 @@
 
 
             <ImageView
+                android:id="@+id/img_wall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:src="@mipmap/ic_movies" />
+                app:srcCompat="@mipmap/ic_movies" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
