--- a/baseApp/src/main/res/layout/create_plan_view.xml
+++ b/baseApp/src/main/res/layout/create_plan_view.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -30,7 +31,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:onClick="@{()-> viewModel.actionLeft()}"
-                android:src="@mipmap/ic_back" />
+                app:srcCompat="@mipmap/ic_back" />
 
             <TextView
                 android:id="@+id/txt_title"
@@ -74,7 +75,7 @@
                     android:layout_gravity="top|left"
                     android:layout_marginLeft="40dp"
                     android:layout_marginTop="30dp"
-                    android:src="@mipmap/ic_lunch" />
+                    app:srcCompat="@mipmap/ic_lunch" />
 
 
                 <ImageView
@@ -83,7 +84,7 @@
                     android:layout_gravity="top|right"
                     android:layout_marginTop="30dp"
                     android:layout_marginRight="40dp"
-                    android:src="@mipmap/ic_gym" />
+                    app:srcCompat="@mipmap/ic_gym" />
 
                 <ImageView
                     android:layout_width="120dp"
@@ -91,7 +92,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="15dp"
-                    android:src="@mipmap/ic_movies" />
+                    app:srcCompat="@mipmap/ic_movies" />
 
                 <ImageView
                     android:layout_width="90dp"
@@ -99,7 +100,7 @@
                     android:layout_gravity="bottom|left"
                     android:layout_marginLeft="40dp"
                     android:layout_marginBottom="30dp"
-                    android:src="@mipmap/ic_go_out" />
+                    app:srcCompat="@mipmap/ic_go_out" />
 
                 <ImageView
                     android:layout_width="70dp"
@@ -107,7 +108,7 @@
                     android:layout_gravity="bottom|right"
                     android:layout_marginRight="60dp"
                     android:layout_marginBottom="20dp"
-                    android:src="@mipmap/ic_go_out" />
+                    app:srcCompat="@mipmap/ic_go_out" />
 
             </FrameLayout>
 
