--- a/baseApp/src/main/res/layout/header_item_view.xml
+++ b/baseApp/src/main/res/layout/header_item_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fl_root"
     android:layout_width="match_parent"
     android:layout_height="@dimen/actionbar_height"
@@ -28,7 +29,7 @@
         android:layout_height="36dp"
         android:layout_gravity="center|right"
         android:layout_marginRight="60dp"
-        android:src="@mipmap/ic_grid2"
+        app:srcCompat="@mipmap/ic_grid2"
         android:textSize="@dimen/connect_text_size_22" />
 
     <ImageView
@@ -37,7 +38,7 @@
         android:layout_height="36dp"
         android:layout_gravity="center|right"
         android:layout_marginRight="10dp"
-        android:src="@mipmap/ic_profile"
+        app:srcCompat="@mipmap/ic_profile"
         android:textSize="@dimen/connect_text_size_22" />
 
 </FrameLayout>
