--- a/baseApp/src/main/res/layout/home_view.xml
+++ b/baseApp/src/main/res/layout/home_view.xml
@@ -1,5 +1,5 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,109 +8,43 @@
             type="com.motor.connect.feature.home.HomeViewModel" />
     </data>
 
-    <FrameLayout
+    <LinearLayout
+        android:id="@+id/compliance_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <SeekBar
+            android:id="@+id/sb_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="46dp">
+            android:max="10000"
+            android:min="0"
+            android:progress="0" />
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
+            android:id="@+id/circular_progress"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="8dp"
+            app:direction="clockwise" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
 
+        <Button
+            android:id="@+id/btn_demo"
+            android:layout_width="180dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/add_container"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_grey"
+            android:gravity="center"
+            android:minHeight="46dp"
+            android:text="Demo" />
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="46dp"
-                        android:layout_gravity="center|top"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="10dp"
-                        card_view:cardCornerRadius="@dimen/card_radius">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:text="test Card View end"
-                            android:textSize="@dimen/connect_text_size_title" />
-
-                    </android.support.v7.widget.CardView>
-                </LinearLayout>
-            </ScrollView>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/bottom_container"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_gravity="bottom"
-            android:background="@drawable/card_view_style"
-            android:gravity="center|center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/btn_home"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center"
-                android:layout_weight="1"
-                android:background="@drawable/card_view_style"
-                android:gravity="center|center_vertical"
-                android:onClick="@{()-> viewModel.showHomePlanning()}"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:text="Màn Hình Chính"
-                android:textSize="@dimen/connect_text_size_menu" />
-
-            <TextView
-                android:id="@+id/btn_add"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/card_view_style"
-                android:gravity="center"
-                android:onClick="@{()-> viewModel.showAddArea()}"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:text="Thêm Khu Vực"
-                android:textSize="@dimen/connect_text_size_menu" />
-
-            <TextView
-                android:id="@+id/btn_notify"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/card_view_style"
-                android:gravity="center"
-                android:onClick="@{()-> viewModel.showNotification()}"
-                android:text="Thông Báo"
-                android:textSize="@dimen/connect_text_size_menu" />
-
-            <TextView
-                android:id="@+id/btn_setting"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/card_view_style"
-                android:gravity="center"
-                android:onClick="@{()-> viewModel.showSetting()}"
-                android:text="Cài Đặt"
-                android:textSize="@dimen/connect_text_size_menu" />
-
-        </LinearLayout>
-    </FrameLayout>
+    </LinearLayout>
 </layout>
