--- a/baseApp/src/main/res/layout/setting_view.xml
+++ b/baseApp/src/main/res/layout/setting_view.xml
@@ -1,4 +1,5 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -28,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                android:src="@mipmap/ic_back" />
+                app:srcCompat="@mipmap/ic_back" />
 
             <TextView
                 android:id="@+id/txt_title"
