--- a/baseApp/src/main/res/values/colors.xml
+++ b/baseApp/src/main/res/values/colors.xml
@@ -21,4 +21,16 @@
     <color name="color_dark">#607D8B</color>
 
 
+    <color name="white">#FFFFFF</color>
+    <color name="light_gray">#ABBAC2</color>
+    <color name="text_gray">#6B767D</color>
+    <color name="coral_blue">#1DAEFA</color>
+    <color name="dark_blue">#125D9D</color>
+    <color name="black">#ff000000</color>
+
+
+    <color name="circleProgressCompleteStartGradient">@color/dark_blue</color>
+    <color name="circleProgressCompleteEndGradient">@color/coral_blue</color>
+    <color name="circleProgressIncompleteStartGradient">@color/light_gray</color>
+    <color name="circleProgressIncompleteEndGradient">@color/light_gray</color>
 </resources>
