--- a/baseApp/src/main/res/values/dimens.xml
+++ b/baseApp/src/main/res/values/dimens.xml
@@ -31,4 +31,11 @@ F
     <dimen name="connect_text_size_22">22sp</dimen>
     <dimen name="connect_text_size_16">16sp</dimen>
 
+
+    <dimen name="circleProgressRadius">60dp</dimen>
+    <dimen name="circleProgressThickness">7dp</dimen>
+
+    <dimen name="curvedTextViewTextSize">15sp</dimen>
+    <dimen name="curvedTextRadius">70dp</dimen>
+    <dimen name="curvedTextPadding">3dp</dimen>
 </resources>
