--- a/baseApp/src/main/res/layout/header_item_view_backup.xml
+++ b/baseApp/src/main/res/layout/header_item_view_backup.xml
@@ -24,6 +24,15 @@
 
 
     <ImageView
+        android:id="@+id/grid_view"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center|right"
+        android:layout_marginRight="60dp"
+        android:textSize="@dimen/connect_text_size_22"
+        app:srcCompat="@mipmap/ic_grid2" />
+
+    <ImageView
         android:id="@+id/ic_profile"
         android:layout_width="36dp"
         android:layout_height="36dp"
