--- a/baseApp/src/main/res/layout/add_area_view.xml
+++ b/baseApp/src/main/res/layout/add_area_view.xml
@@ -103,10 +103,10 @@
                 android:layout_marginTop="10dp">
 
                 <EditText
-                    android:id="@+id/input"
+                    android:id="@+id/input_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Note"
+                    android:hint="Mo Ta Khu Vuc"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:textSize="20sp" />
@@ -127,10 +127,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="2"
+                    android:textSize="18sp"
                     android:gravity="center|left"
-                    android:text="So Van su dung: " />
+                    android:text="So Van su dung (toi da 8 van)" />
 
                 <TextView
+                    android:id="@+id/txt_van"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
@@ -138,7 +140,7 @@
                     android:background="@drawable/border_rect_bg"
                     android:gravity="center"
                     android:minHeight="40dp"
-                    android:text="6 Van"
+                    android:text="2 Van"
                     android:textSize="20sp" />
 
             </LinearLayout>
