--- a/baseApp/src/main/res/values/arrays.xml
+++ b/baseApp/src/main/res/values/arrays.xml
@@ -17,4 +17,14 @@
         <item>Others</item>
         <item>Others</item>
     </string-array>
+
+    <string-array name="number_van_choice">
+        <item>2 Van</item>
+        <item>3 Van</item>
+        <item>4 Van</item>
+        <item>5 Van</item>
+        <item>6 Van</item>
+        <item>7 Van</item>
+        <item>8 Van</item>
+    </string-array>
 </resources>
