--- a/baseApp/src/main/res/layout/activity_main.xml
+++ b/baseApp/src/main/res/layout/activity_main.xml
@@ -18,14 +18,27 @@
             android:layout_height="match_parent"
             android:layout_marginTop="5dp">
 
+            <TextView
+                android:id="@+id/txt_empty"
+                style="@style/TextView.Screen.Title"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/actionbar_height"
+                android:background="@drawable/cirle_background"
+                android:gravity="center"
+                android:text="@string/home_area_empty"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/connect_text_size_36"
+                android:visibility="gone" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:paddingBottom="46dp"
-                app:changedPositions="@{viewModel.changedPositions}"
+                android:paddingBottom="@dimen/actionbar_height"
                 app:data="@{viewModel.dataArea}"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
