--- a/baseApp/src/main/res/layout/add_area_view.xml
+++ b/baseApp/src/main/res/layout/add_area_view.xml
@@ -1,5 +1,5 @@
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -76,7 +76,8 @@
                     android:imeOptions="actionNext"
                     android:inputType="textPersonName"
                     android:lines="1"
-                    android:textSize="20sp" />
+                    android:maxLength="25"
+                    android:textSize="@dimen/connect_text_size_title" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -93,7 +94,8 @@
                     android:hint="Phone Number"
                     android:imeOptions="actionNext"
                     android:inputType="phone"
-                    android:textSize="20sp" />
+                    android:maxLength="10"
+                    android:textSize="@dimen/connect_text_size_title" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -109,7 +111,7 @@
                     android:hint="Mo Ta Khu Vuc"
                     android:imeOptions="actionDone"
                     android:inputType="text"
-                    android:textSize="20sp" />
+                    android:textSize="@dimen/connect_text_size_title" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -127,9 +129,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="2"
-                    android:textSize="18sp"
                     android:gravity="center|left"
-                    android:text="So Van su dung (toi da 8 van)" />
+                    android:text="So Van su dung"
+                    android:textSize="@dimen/connect_text_size_title" />
 
                 <TextView
                     android:id="@+id/txt_van"
@@ -141,7 +143,7 @@
                     android:gravity="center"
                     android:minHeight="40dp"
                     android:text="2 Van"
-                    android:textSize="20sp" />
+                    android:textSize="@dimen/connect_text_size_title" />
 
             </LinearLayout>
 
