--- a/baseApp/src/main/res/layout/activity_main.xml
+++ b/baseApp/src/main/res/layout/activity_main.xml
@@ -13,9 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <include
+            android:id="@+id/header_container"
+            layout="@layout/header_item_view" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@+id/header_container"
             android:layout_marginTop="5dp">
 
             <TextView
