--- a/baseApp/src/main/res/layout/setting_view.xml
+++ b/baseApp/src/main/res/layout/setting_view.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                app:srcCompat="@mipmap/ic_back" />
+                app:srcCompat="@mipmap/ic_back_arrow" />
 
             <TextView
                 android:id="@+id/txt_title"
