- prepare UI detail area - fix ui processing countdown

--- a/baseApp/src/main/res/drawable/circular.xml
+++ b/baseApp/src/main/res/drawable/circular.xml
@@ -10,9 +10,9 @@
 
 
             <gradient
-                android:centerColor="#999999"
-                android:endColor="#999999"
-                android:startColor="#999999"
+                android:centerColor="@color/color_grey"
+                android:endColor="@color/color_grey"
+                android:startColor="@color/color_grey"
                 android:type="sweep" />
         </shape>
     </item>
@@ -38,9 +38,9 @@
                     android:toDegrees="360" />
 
                 <gradient
-                    android:centerColor="#00FF00"
-                    android:endColor="#00FF00"
-                    android:startColor="#00FF00"
+                    android:centerColor="@color/color_blue"
+                    android:endColor="@color/color_blue"
+                    android:startColor="@color/color_blue"
                     android:type="sweep" />
 
             </shape>
