--- a/baseApp/src/main/res/layout/setting_view.xml
+++ b/baseApp/src/main/res/layout/setting_view.xml
@@ -25,11 +25,11 @@
 
             <ImageView
                 android:id="@+id/btn_action_left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="36dp"
+                android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                app:srcCompat="@mipmap/ic_back_arrow" />
+                app:srcCompat="@mipmap/ic_back" />
 
             <TextView
                 android:id="@+id/txt_title"
