--- a/baseApp/src/main/res/layout/detail_view.xml
+++ b/baseApp/src/main/res/layout/detail_view.xml
@@ -21,7 +21,7 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginStart="28dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
@@ -31,6 +31,7 @@
                 android:background="@color/color_blue"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
+                android:src="@drawable/cheese_4"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
@@ -55,10 +56,13 @@
             android:orientation="vertical"
             android:paddingTop="24dp">
 
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+                android:layout_marginLeft="@dimen/card_margin"
+                android:layout_marginRight="@dimen/card_margin"
+                android:layout_marginBottom="@dimen/card_margin">
 
                 <LinearLayout
                     style="@style/Widget.CardContent"
@@ -68,13 +72,77 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Info"
+                        android:text="Thong tin khu vuc"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                    <TextView
+                        android:id="@+id/txt_area_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Ten khu vuc" />
+
+                    <TextView
+                        android:id="@+id/txt_area_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Sdt: 0906383956" />
+
+                    <TextView
+                        android:id="@+id/txt_area_van"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Tong so van" />
+
+                    <TextView
+                        android:id="@+id/txt_area_scheduler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Lich tuoi" />
+
+                    <TextView
+                        android:id="@+id/txt_time_remain"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Lich tuoi tiep theo" />
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/card_margin"
+                android:layout_marginRight="@dimen/card_margin"
+                android:layout_marginBottom="@dimen/card_margin">
+
+                <LinearLayout
+                    style="@style/Widget.CardContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/cheese_ipsum" />
+                        android:text="Thong tin may bom"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                    <TextView
+                        android:id="@+id/txt_area_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Trang thai" />
+
+                    <TextView
+                        android:id="@+id/txt_area_van_used"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="So van dang mo (van 01,02 ..)" />
+
+                    <TextView
+                        android:id="@+id/txt_time_reminder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Thoi gian tuoi" />
 
                 </LinearLayout>
 
@@ -95,40 +163,20 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Friends"
+                        android:text="Ghi chu"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                     <TextView
+                        android:id="@+id/txt_area_details"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/cheese_ipsum" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/card_margin"
-                android:layout_marginRight="@dimen/card_margin"
-                android:layout_marginBottom="@dimen/card_margin">
-
-                <LinearLayout
-                    style="@style/Widget.CardContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        android:text="Khu vuc 01, buoi da xanh 2 nam tuoi" />
 
                     <TextView
+                        android:id="@+id/txt_area_history"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Related"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/cheese_ipsum" />
+                        android:text="Ngay 20 tuoi buoi sang luc 7h 30ph, buoi chieu luc 16h 30ph ..." />
 
                 </LinearLayout>
 
@@ -140,11 +188,13 @@
 
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_action_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/card_margin"
+        android:layout_margin="10dp"
         android:clickable="true"
-        android:src="@drawable/places_ic_clear"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_setting"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end" />
 </android.support.design.widget.CoordinatorLayout>
