--- a/baseApp/src/main/res/layout/notification_view.xml
+++ b/baseApp/src/main/res/layout/notification_view.xml
@@ -26,8 +26,8 @@
 
             <ImageView
                 android:id="@+id/action_left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="36dp"
+                android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
                 app:srcCompat="@mipmap/ic_back" />
