--- a/baseApp/src/main/res/layout/detail_view.xml
+++ b/baseApp/src/main/res/layout/detail_view.xml
@@ -1,200 +1,248 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_content"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/detail_backdrop_height"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <data>
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="28dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        <variable
+            name="viewModel"
+            type="com.motor.connect.feature.details.AreaDetailViewModel" />
+    </data>
 
-            <ImageView
-                android:id="@+id/backdrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/color_blue"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/cheese_4"
-                app:layout_collapseMode="parallax" />
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:fitsSystemWindows="true">
 
-        <LinearLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/detail_backdrop_height"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginEnd="64dp"
+                app:expandedTitleMarginStart="28dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/color_blue"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/cheese_4"
+                    app:layout_collapseMode="parallax" />
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="24dp">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
-            <android.support.v7.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/card_margin"
-                android:layout_marginRight="@dimen/card_margin"
-                android:layout_marginBottom="@dimen/card_margin">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingTop="24dp">
 
-                <LinearLayout
-                    style="@style/Widget.CardContent"
+
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/card_margin"
+                    android:layout_marginRight="@dimen/card_margin"
+                    android:layout_marginBottom="@dimen/card_margin">
 
-                    <TextView
+                    <LinearLayout
+                        style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Thong tin khu vuc"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/txt_area_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Ten khu vuc" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Thong tin khu vuc"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                    <TextView
-                        android:id="@+id/txt_area_phone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Sdt: 0906383956" />
+                        <TextView
+                            android:id="@+id/txt_area_name"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Ten khu vuc" />
 
-                    <TextView
-                        android:id="@+id/txt_area_van"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tong so van" />
+                        <TextView
+                            android:id="@+id/txt_area_phone"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Sdt: 0906383956" />
 
-                    <TextView
-                        android:id="@+id/txt_area_scheduler"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lich tuoi" />
+                        <TextView
+                            android:id="@+id/txt_area_van"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Tong so van" />
 
-                    <TextView
-                        android:id="@+id/txt_time_remain"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lich tuoi tiep theo" />
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/txt_area_scheduler"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Lich tuoi" />
 
-            </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/card_margin"
-                android:layout_marginRight="@dimen/card_margin"
-                android:layout_marginBottom="@dimen/card_margin">
+                    </LinearLayout>
 
-                <LinearLayout
-                    style="@style/Widget.CardContent"
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/progressing_container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/card_margin"
+                    android:minHeight="160dp">
 
-                    <TextView
+                    <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Thong tin may bom"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:layout_gravity="center|right">
 
-                    <TextView
-                        android:id="@+id/txt_area_status"
+                        <include
+
+                            layout="@layout/progressing_view" />
+                    </FrameLayout>
+
+                    <LinearLayout
+                        style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Trang thai" />
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/txt_area_van_used"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="So van dang mo (van 01,02 ..)" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Dang chay"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                    <TextView
-                        android:id="@+id/txt_time_reminder"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Thoi gian tuoi" />
+                        <TextView
+                            android:id="@+id/txt_time"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Thoi gian bat dau"
+                            android:textSize="@dimen/connect_text_size_description" />
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/txt_time_total"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Thoi gian tuoi"
+                            android:textSize="@dimen/connect_text_size_description" />
 
-            </android.support.v7.widget.CardView>
+                        <TextView
+                            android:id="@+id/txt_time_min"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="So van mo"
+                            android:textSize="@dimen/connect_text_size_description" />
+                    </LinearLayout>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/card_margin"
-                android:layout_marginRight="@dimen/card_margin"
-                android:layout_marginBottom="@dimen/card_margin">
 
-                <LinearLayout
-                    style="@style/Widget.CardContent"
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/card_margin"
+                    android:layout_marginRight="@dimen/card_margin"
+                    android:layout_marginBottom="@dimen/card_margin">
 
-                    <TextView
+                    <LinearLayout
+                        style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Ghi chu"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/txt_area_details"
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Thong tin may bom"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                        <TextView
+                            android:id="@+id/txt_area_status"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Trang thai" />
+
+                        <TextView
+                            android:id="@+id/txt_area_van_used"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="So van dang mo (van 01,02 ..)" />
+
+                        <TextView
+                            android:id="@+id/txt_time_reminder"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Thoi gian tuoi" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/card_margin"
+                    android:layout_marginRight="@dimen/card_margin"
+                    android:layout_marginBottom="@dimen/card_margin">
+
+                    <LinearLayout
+                        style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Khu vuc 01, buoi da xanh 2 nam tuoi" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/txt_area_history"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Ngay 20 tuoi buoi sang luc 7h 30ph, buoi chieu luc 16h 30ph ..." />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Ghi chu"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/txt_area_details"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Khu vuc 01, buoi da xanh 2 nam tuoi" />
 
-            </android.support.v7.widget.CardView>
+                        <TextView
+                            android:id="@+id/txt_area_history"
+                            style="@style/TextView.Screen.Detail"
+                            android:text="Ngay 20 tuoi buoi sang luc 7h 30ph, buoi chieu luc 16h 30ph ..." />
 
-        </LinearLayout>
+                    </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_action_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:clickable="true"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/ic_setting"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom|right|end" />
-</android.support.design.widget.CoordinatorLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_action_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_setting"
+            app:layout_anchor="@id/appbar"
+            app:layout_anchorGravity="bottom|right|end" />
+    </android.support.design.widget.CoordinatorLayout>
+</layout>
