--- a/baseApp/src/main/res/layout/item_data.xml
+++ b/baseApp/src/main/res/layout/item_data.xml
@@ -2,13 +2,8 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fl_root"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginBottom="5dp"
+    style="@style/Widget.CardItem"
+    android:layout_margin="5dp"
     android:background="@drawable/border_rect_bg"
     android:minHeight="60dp"
     android:orientation="vertical">
@@ -16,55 +11,30 @@
     <TextView
         android:id="@+id/txt_name"
         style="@style/TextView.Screen.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:gravity="top|left"
         android:text="Area name"
-        android:textSize="@dimen/connect_text_size_22" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
     <TextView
         android:id="@+id/txt_phone"
         style="@style/TextView.Screen.Description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginLeft="10dp"
         android:text="Sdt: 0906383956"
-        android:textSize="@dimen/connect_text_size_16" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/txt_status"
         style="@style/TextView.Screen.Description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|left"
-        android:layout_marginLeft="10dp"
-        android:text="Status: dang tuoi"
-        android:textSize="@dimen/connect_text_size_16" />
+        android:text="Status: dang tuoi" />
 
     <TextView
         android:id="@+id/txt_van_number"
         style="@style/TextView.Screen.Description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|left"
-        android:layout_marginLeft="10dp"
-        android:text="So van su dung"
-        android:textSize="@dimen/connect_text_size_16" />
+        android:text="So van su dung" />
 
     <TextView
         android:id="@+id/txt_schedule"
         style="@style/TextView.Screen.Description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="5dp"
         android:ellipsize="end"
-        android:text="Lich tuoi ngay tuoi 3 lan"
-        android:textSize="@dimen/connect_text_size_16" />
+        android:text="Lich tuoi ngay tuoi 3 lan" />
 
 </LinearLayout>
 
