--- a/baseApp/src/main/res/layout/progressing_view.xml
+++ b/baseApp/src/main/res/layout/progressing_view.xml
@@ -2,17 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/circular_container"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_gravity="center"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:layout_marginRight="30dp"
+    android:layout_gravity="right"
     android:background="@color/transparent">
 
     <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
         android:id="@+id/circular_progress"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="right"
         app:direction="clockwise" />
 </FrameLayout>
