--- a/baseApp/src/main/res/layout/setting_view.xml
+++ b/baseApp/src/main/res/layout/setting_view.xml
@@ -55,7 +55,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_area"
+                android:id="@+id/txt_area_setting"
                 style="@style/TextView.Screen.Description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,10 +64,11 @@
                 android:background="@drawable/border_rect_bg"
                 android:drawableRight="@mipmap/ic_next_arrow"
                 android:gravity="center|left"
+                android:onClick="openSettingScheduler"
                 android:minHeight="46dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
-                android:text="Cài đặt lịch tưới khu vực" />
+                android:text="Cài đặt lịch tưới" />
 
 
             <TextView
@@ -79,6 +80,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/border_rect_bg"
                 android:drawableRight="@mipmap/ic_next_arrow"
+                android:onClick="openConfigScreen"
                 android:gravity="center|left"
                 android:minHeight="46dp"
                 android:paddingLeft="20dp"
@@ -95,6 +97,7 @@
                 android:background="@drawable/border_rect_bg"
                 android:drawableRight="@mipmap/ic_next_arrow"
                 android:gravity="center|left"
+                android:onClick="openNotedScreen"
                 android:minHeight="46dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
@@ -110,6 +113,7 @@
                 android:background="@drawable/border_rect_bg"
                 android:drawableRight="@mipmap/ic_next_arrow"
                 android:gravity="center|left"
+                android:onClick="openHowToUseScreen"
                 android:minHeight="46dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
@@ -126,6 +130,7 @@
                 android:drawableRight="@mipmap/ic_next_arrow"
                 android:gravity="center|left"
                 android:minHeight="46dp"
+                android:onClick="openHelpFeedbackScreen"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 android:text="Trợ giúp - Phản hồi" />
