--- a/baseApp/src/main/res/menu/dialog_select_setting.xml
+++ b/baseApp/src/main/res/menu/dialog_select_setting.xml
@@ -1,28 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  Copyright 2018 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
 
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  -->
-
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/setting_schedule_review"
+        android:title="Xem lại lịch tưới" />
 
     <item
         android:id="@+id/setting_schedule_area"
-        android:title="Lich tuoi" />
+        android:title="Cài đặt lịch tưới" />
 
     <item
         android:id="@+id/setting_vans_area"
-        android:title="van su dung" />
+        android:title="Thiết lập van sử dụng" />
+
+    <item
+        android:id="@+id/setting_schedule_stop"
+        android:title="Ngắt lịch tưới trong ngày" />
 
 </menu>
