--- a/baseApp/src/main/res/values/styles.xml
+++ b/baseApp/src/main/res/values/styles.xml
@@ -73,4 +73,14 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="PopupMenu" parent="@android:style/Widget.PopupMenu">
+        <item name="android:popupBackground">@color/color_grey_light</item>
+        <item name="android:textColor">@color/color_black</item>
+        <item name="android:textSize">@dimen/connect_text_size_title</item>
+    </style>
+
+    <style name="SwitchCompatTheme" >
+        <item name="colorControlActivated">@color/color_blue</item>
+    </style>
+
 </resources>
