update String util

--- a/baseApp/src/main/res/layout/setting_schedule_activity.xml
+++ b/baseApp/src/main/res/layout/setting_schedule_activity.xml
@@ -78,6 +78,7 @@
                     style="@style/TextView.Screen.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center|top"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:background="@drawable/bg_button_style"
