--- a/baseApp/src/main/res/layout/home_view.xml
+++ b/baseApp/src/main/res/layout/home_view.xml
@@ -13,16 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white"
-        android:gravity="center"
+        android:gravity="top"
         android:orientation="vertical">
-
-        <SeekBar
-            android:id="@+id/sb_progress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="10000"
-            android:min="0"
-            android:progress="0" />
 
         <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
             android:id="@+id/circular_progress"
@@ -58,34 +50,13 @@
             android:minHeight="46dp"
             android:text="Test Function" />
 
-
-        <FrameLayout
-            android:id="@+id/circular_container"
-            android:layout_width="250dp"
-            android:layout_height="250dp">
-
-            <ProgressBar
-
-                android:id="@+id/circularProgressbar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:indeterminate="false"
-                android:max="100"
-                android:progress="0"
-                android:progressDrawable="@drawable/circular"
-                android:secondaryProgress="100" />
-
-
-            <TextView
-                android:id="@+id/tv"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:gravity="center"
-                android:text="25%"
-                android:textColor="@color/color_blue"
-                android:textSize="20sp" />
-        </FrameLayout>
-
+        <TextView
+            android:id="@+id/txt_demo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="test demo" />
     </LinearLayout>
 </layout>
