--- a/baseApp/src/main/res/layout/detail_view.xml
+++ b/baseApp/src/main/res/layout/detail_view.xml
@@ -110,9 +110,10 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/progressing_container"
+                    android:id="@+id/working_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_margin="@dimen/card_margin"
                     android:minHeight="160dp">
 
@@ -130,7 +131,8 @@
                         style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="visible">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -139,19 +141,19 @@
                             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                         <TextView
-                            android:id="@+id/txt_time"
+                            android:id="@+id/txt_time_start"
                             style="@style/TextView.Screen.Detail"
                             android:text="Thoi gian bat dau"
                             android:textSize="@dimen/connect_text_size_description" />
 
                         <TextView
-                            android:id="@+id/txt_time_total"
+                            android:id="@+id/txt_time_working"
                             style="@style/TextView.Screen.Detail"
                             android:text="Thoi gian tuoi"
                             android:textSize="@dimen/connect_text_size_description" />
 
                         <TextView
-                            android:id="@+id/txt_time_min"
+                            android:id="@+id/txt_van"
                             style="@style/TextView.Screen.Detail"
                             android:text="So van mo"
                             android:textSize="@dimen/connect_text_size_description" />
@@ -161,11 +163,13 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/info_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/card_margin"
                     android:layout_marginRight="@dimen/card_margin"
-                    android:layout_marginBottom="@dimen/card_margin">
+                    android:layout_marginBottom="@dimen/card_margin"
+                    android:visibility="gone">
 
                     <LinearLayout
                         style="@style/Widget.CardContent"
@@ -189,9 +193,9 @@
                             android:text="Van dang mo (van 01,02 ..)" />
 
                         <TextView
-                            android:id="@+id/txt_time_reminder"
+                            android:id="@+id/txt_schedule_working"
                             style="@style/TextView.Screen.Detail"
-                            android:text="Thoi gian tuoi" />
+                            android:text="Lich dang tuoi" />
 
                     </LinearLayout>
 
