--- a/baseApp/src/main/res/layout/progressing_view.xml
+++ b/baseApp/src/main/res/layout/progressing_view.xml
@@ -4,12 +4,12 @@
     android:id="@+id/circular_container"
     android:layout_width="120dp"
     android:layout_height="120dp"
-    android:layout_marginRight="30dp"
     android:layout_gravity="right"
+    android:layout_marginRight="30dp"
     android:background="@color/transparent">
 
     <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
-        android:id="@+id/circular_progress"
+        android:id="@+id/working_progress"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="right"
