Add setting van

--- a/baseApp/src/main/res/layout/setting_area_van_view.xml
+++ b/baseApp/src/main/res/layout/setting_area_van_view.xml
@@ -38,299 +38,13 @@
                 android:text="Chọn van tưới"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-            <View
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <!-- First -->
-
-            <LinearLayout
-                android:id="@+id/container_van1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|left"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 01"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <LinearLayout
-                android:id="@+id/container_van2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 02"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch2"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <LinearLayout
-                android:id="@+id/container_van3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|left"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 03"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch3"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <LinearLayout
-                android:id="@+id/container_van4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|left"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 04"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch4"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <LinearLayout
-                android:id="@+id/container_van5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|left"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 05"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch5"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <LinearLayout
-                android:id="@+id/container_van6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|left"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 06"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch6"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <LinearLayout
-                android:id="@+id/container_van7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|left"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 07"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch7"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
-
-            <LinearLayout
-                android:id="@+id/container_van8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center|left"
-                android:minHeight="@dimen/actionbar_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextView.Screen.Description"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:gravity="center|left"
-                    android:text="Van 08"
-                    android:textSize="@dimen/connect_text_size_title" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switch8"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1.5"
-                    android:gravity="center"
-                    android:paddingRight="20dp"
-                    android:theme="@style/SwitchCompatTheme" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_grey" />
+                android:layout_height="match_parent"
+                android:paddingTop="5dp"
+                app:layoutManager="android.support.v7.widget.GridLayoutManager" />
         </LinearLayout>
 
 
