--- a/baseApp/src/main/res/layout/item_vans_used.xml
+++ b/baseApp/src/main/res/layout/item_vans_used.xml
@@ -13,17 +13,19 @@
 
     <TextView
         style="@style/TextView.Screen.Description"
+        android:id="@+id/van_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="2"
         android:gravity="center|left"
+        android:paddingLeft="20dp"
         android:text="Van 01"
         android:textSize="@dimen/connect_text_size_title" />
 
 
     <android.support.v7.widget.SwitchCompat
-        android:id="@+id/switch1"
+        android:id="@+id/sw_van"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
